--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,3 +4,7 @@
  *= require_self
  */
 @import "railsbricks_custom";
+@import "animate.min.scss";
+@import "bootstrap.min.scss";
+@import "bootstrap.scss";
+@import "creative.scss";
