--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,32 +7,36 @@
   <%= favicon_link_tag 'apple-touch-icon.png', rel: 'apple-touch-icon', type: 'image/png' %>
   <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+
+  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div id="wrap">
-    <header>
-      <%= render 'layouts/navigation' %>
-    </header>
+  <!--<div id="wrap">-->
+    <!--<header>-->
+      <!--<%= render 'layouts/navigation' %>-->
+    <!--</header>-->
 
-    <div class="container">
+    <!--<div class="container">-->
 
-      <div class="row">
-        <div class="col-sm-6 col-sm-offset-3 text-center">
-          <%= render 'layouts/messages' %>
-        </div>
-      </div>
+      <!--<div class="row">-->
+        <!--<div class="col-sm-6 col-sm-offset-3 text-center">-->
+          <!--<%= render 'layouts/messages' %>-->
+        <!--</div>-->
+      <!--</div>-->
 
-      <div class="row">
-        <div class="col-sm-12">
+      <!--<div class="row">-->
+        <!--<div class="col-sm-12">-->
           <%= yield %>
-        </div>
-      </div>
+        <!--</div>-->
+      <!--</div>-->
 
-    </div>
-  </div>
+    <!--</div>-->
+  <!--</div>-->
 
-  <%= render 'layouts/footer' %>
+  <!--<%= render 'layouts/footer' %>-->
 
 </body>
 </html>
