--- a/app/assets/stylesheets/bootstrap.scss
+++ b/app/assets/stylesheets/bootstrap.scss
@@ -1,5 +1,12 @@
 
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+a {
+  color: rgba(198, 198, 198, 0.79) !important;
+}
+  a:hover {
+    color: darkorange !important;
+  }
+
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
