--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,9 +5,8 @@
 
       <div class="col-xs-12 text-center">
         <p><small>
-          &copy; <%= Time.now.year %> - Yourself!
+          &copy; <%= Time.now.year %> - You!
           <br/>
-          Assembled with <%= link_to "RailsBricks", "http://www.railsbricks.net" %>
         </small></p>
       </div>
 
