--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,15 +28,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand page-scroll" href="#page-top" id="brandname">Brandon Andrew L</a>
+      <a class="navbar-brand page-scroll" href="#page-top" id="brandname">Brandon Andrew LoGuercio</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li>
-          <a class="page-scroll" href="new_user_session_path">Sign in</a>
-        </li>
         <li>
           <a class="page-scroll" href="#about">About</a>
         </li>
@@ -59,9 +56,9 @@
 <header>
   <div class="header-content">
     <div class="header-content-inner">
-      <h1>Brandon's Personal Project</h1>
+      <h1>My Portfolio</h1>
       <hr>
-      <p>Words and words and words and words and more words!</p>
+      <p>A responsive home page for my most recent projects </p>
       <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
     </div>
   </div>
@@ -223,8 +220,8 @@
 <aside class="bg-dark">
   <div class="container text-center">
     <div class="call-to-action">
-      <h2>Downloadable!</h2>
-      <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+      <h2>Customizable!</h2>
+      <a href="#" class="btn btn-default btn-xl wow tada">Collaborate your own working app with me!</a>
     </div>
   </div>
 </aside>
