Run creative css through erb so we can use an asset pipeline helper so it will work on heroku.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,7 +4,7 @@
  *= require_self
  */
 @import "railsbricks_custom";
-@import "animate.min.scss";
-@import "bootstrap.min.scss";
-@import "bootstrap.scss";
-@import "creative.scss";
+@import "animate.min";
+@import "bootstrap.min";
+@import "bootstrap";
+@import "creative";
