--- a/app/assets/stylesheets/creative.scss.erb
+++ b/app/assets/stylesheets/creative.scss.erb
@@ -181,7 +181,7 @@ header {
     min-height: auto;
     text-align: center;
     color: #d9d9d9;
-    background-image: image_url("header.jpg");
+    background-image: image_url("<%= asset_path "header.jpg" %>");
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
