--- a/app/assets/stylesheets/creative.scss.erb
+++ b/app/assets/stylesheets/creative.scss.erb
@@ -482,3 +482,12 @@ body {
 #bottomwords {
   color: #052e69;
 }
+.btn-default {
+    color: #052e69 !important;
+}
+#email a {
+    color: #000066 !important;
+}
+#email a:hover {
+        color: #e1593c !important;
+    }
