--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -58,7 +58,7 @@
     <div class="header-content-inner">
       <h1>My Portfolio</h1>
       <hr>
-      <p>A responsive home page for my most recent projects </p>
+      <p>A responsive home page for my current projects</p>
       <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
     </div>
   </div>
@@ -68,10 +68,10 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h2 class="section-heading">I've got what you need!</h2>
+        <h2 class="section-heading">Let's build a project together!</h2>
         <hr class="light">
-        <p class="text-faded">Here are more words on the page</p>
-        <a href="#" class="btn btn-default btn-xl">Let's Get Started!</a>
+        <p class="text-faded">I look forward to working with you...</p>
+        <a href="mailto:brandonloguercio@yahoo.com" class="btn btn-default btn-xl">Let's Get Started!</a>
       </div>
     </div>
   </div>
@@ -99,7 +99,7 @@
         <div class="service-box">
           <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
           <h3>Ready to Ship</h3>
-          <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+          <p class="text-muted">You can use my themes as is, or you can make changes!</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 text-center">
@@ -124,15 +124,15 @@
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="col-lg-4 col-sm-6">
-        <a href="#" class="portfolio-box">
+        <a href="https://brandonnotespace.herokuapp.com/" target="_blank" class="portfolio-box">
           <%= image_tag "portfolio/1.jpg", class:"img-responsive", alt:"Placeholder"%>
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-category text-faded">
-                Category
+                Project
               </div>
               <div class="project-name">
-                Project Name
+                NoteSpace
               </div>
             </div>
           </div>
@@ -234,13 +234,17 @@
         <hr class="primary">
         <p>Ready to start your next project with me? That's great!</p>
       </div>
-      <div class="col-lg-4 col-lg-offset-2 text-center">
+      <div class="col-lg-4 text-center">
         <i class="fa fa-phone fa-3x wow bounceIn"></i>
         <p>818-917-9316</p>
       </div>
       <div class="col-lg-4 text-center">
         <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-        <p><a href="mailto:your-email@your-domain.com">BrandonLoguercio@gmail.com</a></p>
+        <p id="email"><a href="mailto:brandonloguercio@yahoo.com">BrandonLoGuercio@yahoo.com</a></p>
+      </div>
+      <div class="col-lg-4 text-center">
+        <i class="fa fa-github-square fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+        <p id="email"><a href="https://www.github.com/BrandonAndrewLoGuercio" target="_blank">BrandonAndrewLoGuercio@github</a></p>
       </div>
     </div>
   </div>
