--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <% title("Users Admin") %>
 <h1>Users <small>Admin</small></h1>
 <p><%= link_to "Back to Admin", admin_root_path %></p>
@@ -53,4 +54,5 @@
 <div class="text-center">
   <p><%= page_entries_info @users %></p>
   <%= paginate @users %>
+</div>
 </div>
