--- a/app/assets/stylesheets/creative.scss
+++ b/app/assets/stylesheets/creative.scss
@@ -17,11 +17,11 @@ hr {
 }
 
 hr.light {
-    border-color: #e3e3e3;
+    border-color: #b7b9bf;
 }
 
 a {
-    color: #052e69;
+    color: #e1593c;
     -webkit-transition: all .45s;
     -moz-transition: all .45s;
     transition: all .45s;
@@ -80,7 +80,7 @@ aside {
 }
 
 .navbar-default {
-    border-color: rgba(34,34,34,.05);
+    border-color: rgba(225, 89, 60, 0.94);
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     background-color: #d9d9d9;
     -webkit-transition: all .35s;
@@ -97,7 +97,7 @@ aside {
 
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
-    color: #052e69;
+    color: #e1593c;
 }
 
 .navbar-default .nav > li>a,
@@ -105,7 +105,7 @@ aside {
     text-transform: uppercase;
     font-size: 14px;
     font-weight: 700;
-    color: #052e69;
+    color: #e1593c;
 }
 
 .navbar-default .nav > li>a:hover,
@@ -126,22 +126,22 @@ aside {
 
 @media(min-width:768px) {
     .navbar-default {
-        border-color: rgba(5, 46, 105, 0.3);
-        background-color: transparent;
+        border-color: rgba(5, 46, 105, 0.99);
+        background-color: rgba(70, 71, 73, 0.59);
     }
 
     .navbar-default .navbar-header .navbar-brand {
-        color: rgba(217, 217, 217, 0.7);
+        color: rgba(116, 116, 116, 0.7);
     }
 
     .navbar-default .navbar-header .navbar-brand:hover,
     .navbar-default .navbar-header .navbar-brand:focus {
-        color: #052e69;
+        color: #e1593c;
     }
 
     .navbar-default .nav > li>a,
     .navbar-default .nav>li>a:focus {
-        color: rgba(5, 46, 105, 0.7);
+        color: rgba(225, 89, 60, 0.84);
     }
 
     .navbar-default .nav > li>a:hover,
