--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,7 +1,9 @@
 <% title("Contact") %>
-<h1 class="page-title">Contact</h1>
 
-<div class="row">
+<div class="container-fluid">
+ <h1 class="page-title">Contact</h1>
+
+ <div class="row">
   <div class="col-sm-6">
 
     <%= form_tag email_confirmation_path, method: 'post', html: {role: "form"} do %>
@@ -43,4 +45,5 @@
     <% end %>
 
   </div>
+</div>
 </div>
