--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,7 +28,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand page-scroll" href="#page-top" id="brandname">Brandon Andrew LoGuercio</a>
+      <a class="navbar-brand page-scroll" href="#page-top" id="brandname">Brandon Andrew L</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,9 +56,9 @@
 <header>
   <div class="header-content">
     <div class="header-content-inner">
-      <h1>My Portfolio</h1>
+      <h1>Brandon's Personal Project</h1>
       <hr>
-      <p>A responsive home page for my most recent projects </p>
+      <p>Words and words and words and words and more words!</p>
       <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
     </div>
   </div>
@@ -106,14 +106,14 @@
         <div class="service-box">
           <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
           <h3>Up to Date</h3>
-          <p class="text-muted">I update dependencies to keep things fresh.</p>
+          <p class="text-muted">We update dependencies to keep things fresh.</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
           <h3>Made with Love</h3>
-          <p class="text-muted">Because you have to make your websites with love these days!</p>
+          <p class="text-muted">You have to make your websites with love these days!</p>
         </div>
       </div>
     </div>
@@ -220,8 +220,8 @@
 <aside class="bg-dark">
   <div class="container text-center">
     <div class="call-to-action">
-      <h2>Customizable!</h2>
-      <a href="#" class="btn btn-default btn-xl wow tada">Collaborate your own working app with me!</a>
+      <h2>Downloadable!</h2>
+      <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
     </div>
   </div>
 </aside>
