--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,7 +28,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand page-scroll" href="#page-top" id="brandname">Brandon Andrew L</a>
+      <a class="navbar-brand page-scroll" href="#page-top" id="brandname">Brandon Andrew LoGuercio</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,9 +56,9 @@
 <header>
   <div class="header-content">
     <div class="header-content-inner">
-      <h1>Brandon's Personal Project</h1>
+      <h1>My Portfolio</h1>
       <hr>
-      <p>Words and words and words and words and more words!</p>
+      <p>A responsive home page for my current projects</p>
       <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
     </div>
   </div>
@@ -68,10 +68,10 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h2 class="section-heading">I've got what you need!</h2>
+        <h2 class="section-heading">Let's build a project together!</h2>
         <hr class="light">
-        <p class="text-faded">Here are more words on the page</p>
-        <a href="#" class="btn btn-default btn-xl">Let's Get Started!</a>
+        <p class="text-faded">I look forward to working with you...</p>
+        <a href="mailto:brandonloguercio@yahoo.com" class="btn btn-default btn-xl">Let's Get Started!</a>
       </div>
     </div>
   </div>
@@ -99,21 +99,21 @@
         <div class="service-box">
           <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
           <h3>Ready to Ship</h3>
-          <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+          <p class="text-muted">You can use my themes as is, or you can make changes!</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
           <h3>Up to Date</h3>
-          <p class="text-muted">We update dependencies to keep things fresh.</p>
+          <p class="text-muted">I update dependencies to keep things fresh.</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
           <h3>Made with Love</h3>
-          <p class="text-muted">You have to make your websites with love these days!</p>
+          <p class="text-muted">Because you have to make your websites with love these days!</p>
         </div>
       </div>
     </div>
@@ -124,15 +124,15 @@
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="col-lg-4 col-sm-6">
-        <a href="#" class="portfolio-box">
+        <a href="https://brandonnotespace.herokuapp.com/" target="_blank" class="portfolio-box">
           <%= image_tag "portfolio/1.jpg", class:"img-responsive", alt:"Placeholder"%>
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-category text-faded">
-                Category
+                Project
               </div>
               <div class="project-name">
-                Project Name
+                NoteSpace
               </div>
             </div>
           </div>
@@ -220,8 +220,8 @@
 <aside class="bg-dark">
   <div class="container text-center">
     <div class="call-to-action">
-      <h2>Downloadable!</h2>
-      <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+      <h2>Customizable!</h2>
+      <a href="#" class="btn btn-default btn-xl wow tada">Let's collaborate on your next app!</a>
     </div>
   </div>
 </aside>
@@ -232,15 +232,19 @@
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <h2 class="section-heading" id="bottomwords">Let's Get In Touch!</h2>
         <hr class="primary">
-        <p>Ready to start your next project with me? That's great!</p>
+        <strong><p>Contact Me:</p></strong>
       </div>
-      <div class="col-lg-4 col-lg-offset-2 text-center">
+      <div class="col-lg-4 text-center">
         <i class="fa fa-phone fa-3x wow bounceIn"></i>
         <p>818-917-9316</p>
       </div>
       <div class="col-lg-4 text-center">
         <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-        <p><a href="mailto:your-email@your-domain.com">BrandonLoguercio@gmail.com</a></p>
+        <p id="email"><a href="mailto:brandonloguercio@yahoo.com">BrandonLoGuercio@yahoo.com</a></p>
+      </div>
+      <div class="col-lg-4 text-center">
+        <i class="fa fa-github-square fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+        <p id="email"><a href="https://www.github.com/BrandonAndrewLoGuercio" target="_blank">BrandonAndrewLoGuercio@github</a></p>
       </div>
     </div>
   </div>
