--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -129,7 +129,7 @@
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-category text-faded">
-                Project
+                Personal Project
               </div>
               <div class="project-name">
                 NoteSpace
@@ -144,7 +144,7 @@
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-category text-faded">
-                Category
+                Personal Project
               </div>
               <div class="project-name">
                 Project Name
@@ -154,15 +154,15 @@
         </a>
       </div>
       <div class="col-lg-4 col-sm-6">
-        <a href="#" class="portfolio-box">
+        <a href="https://quiet-badlands-6262.herokuapp.com/" class="portfolio-box">
           <%= image_tag "portfolio/3.jpg", class:"img-responsive", alt:"Placeholder"%>
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-category text-faded">
-                Category
+                Team Project
               </div>
               <div class="project-name">
-                Project Name
+                SoundTrack
               </div>
             </div>
           </div>
