--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -129,41 +129,44 @@
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-category text-faded">
-                Project
+                Personal Project
               </div>
               <div class="project-name">
                 NoteSpace
               </div>
+              <p>An online note taking app!</p>
             </div>
           </div>
         </a>
       </div>
       <div class="col-lg-4 col-sm-6">
-        <a href="#" class="portfolio-box">
+        <a href="https://brandonmoviereview.herokuapp.com/" target="_blank" class="portfolio-box">
           <%= image_tag "portfolio/2.jpg", class:"img-responsive", alt:"Placeholder"%>
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-category text-faded">
-                Category
+                Personal Project
               </div>
               <div class="project-name">
-                Project Name
+                MovieReview
               </div>
+              <p>Share and review your favorite movies with friends!</p>
             </div>
           </div>
         </a>
       </div>
       <div class="col-lg-4 col-sm-6">
-        <a href="#" class="portfolio-box">
+        <a href="https://quiet-badlands-6262.herokuapp.com/" Target="_blank" class="portfolio-box">
           <%= image_tag "portfolio/3.jpg", class:"img-responsive", alt:"Placeholder"%>
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-category text-faded">
-                Category
+                Group Project
               </div>
               <div class="project-name">
-                Project Name
+                SoundTrack
               </div>
+              <p>A social network for music lovers!</p>
             </div>
           </div>
         </a>
@@ -174,10 +177,10 @@
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-category text-faded">
-                Category
+                Project
               </div>
               <div class="project-name">
-                Project Name
+                TBD
               </div>
             </div>
           </div>
@@ -189,10 +192,10 @@
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-category text-faded">
-                Category
+                Project
               </div>
               <div class="project-name">
-                Project Name
+                TBD
               </div>
             </div>
           </div>
@@ -204,10 +207,10 @@
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-category text-faded">
-                Category
+                Project
               </div>
               <div class="project-name">
-                Project Name
+                TBD
               </div>
             </div>
           </div>
