clean up project links/fonts

--- a/app/assets/stylesheets/creative.scss.erb
+++ b/app/assets/stylesheets/creative.scss.erb
@@ -491,3 +491,8 @@ body {
 #email a:hover {
         color: #e1593c !important;
     }
+.project-name {
+    color: #ffffff !important;
+    font-size: 40px !important;
+    font-family: fantasy !important;
+}
