--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -128,13 +128,14 @@
           <%= image_tag "portfolio/1.jpg", class:"img-responsive", alt:"Placeholder"%>
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
-              <div class="project-category text-faded">
-                Personal Project
-              </div>
               <div class="project-name">
                 NoteSpace
               </div>
               <p>An online note taking app!</p>
+              <div class="project-category text-faded">
+                Personal Project
+              </div>
+              <p>(In development)</p>
             </div>
           </div>
         </a>
@@ -144,13 +145,14 @@
           <%= image_tag "portfolio/2.jpg", class:"img-responsive", alt:"Placeholder"%>
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
-              <div class="project-category text-faded">
-                Personal Project
-              </div>
               <div class="project-name">
                 MovieReview
               </div>
               <p>Share and review your favorite movies with friends!</p>
+              <div class="project-category text-faded">
+                Personal Project
+              </div>
+              <p>(In development)</p>
             </div>
           </div>
         </a>
@@ -160,13 +162,14 @@
           <%= image_tag "portfolio/3.jpg", class:"img-responsive", alt:"Placeholder"%>
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
-              <div class="project-category text-faded">
-                Group Project
-              </div>
               <div class="project-name">
                 SoundTrack
               </div>
               <p>A social network for music lovers!</p>
+              <div class="project-category text-faded">
+                Group Project
+              </div>
+              <p>(In development)</p>
             </div>
           </div>
         </a>
