clean up project links/fonts again

--- a/app/assets/stylesheets/creative.scss.erb
+++ b/app/assets/stylesheets/creative.scss.erb
@@ -494,5 +494,5 @@ body {
 .project-name {
     color: #ffffff !important;
     font-size: 40px !important;
-    font-family: fantasy !important;
+    font-family: "Lucida Grande", "Bitstream Vera Sans", "Verdana" !important;
 }
