clean up project links/fonts again2

--- a/app/assets/stylesheets/creative.scss.erb
+++ b/app/assets/stylesheets/creative.scss.erb
@@ -493,6 +493,6 @@ body {
     }
 .project-name {
     color: #ffffff !important;
-    font-size: 40px !important;
-    font-family: "Lucida Grande", "Bitstream Vera Sans", "Verdana" !important;
+    font-size: 35px !important;
+    font-weight: 200 !important;
 }
