--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -129,7 +129,7 @@
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-name">
-                <font color="#faebd7">NoteSpace</font>
+                <font size=25px color="#faebd7">NoteSpace</font>
               </div>
               <p>An online note taking app!</p>
               <div class="project-category text-faded">
@@ -146,7 +146,7 @@
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-name">
-                <font color="#faebd7">MovieReview</font>
+                <font size=25px color="#faebd7">MovieReview</font>
               </div>
               <p>Share and review your favorite movies with friends!</p>
               <div class="project-category text-faded">
@@ -163,7 +163,7 @@
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-name">
-                <font color="#faebd7">Soundtrack</font>
+                <font size=25px color="#faebd7">SoundTrack</font>
               </div>
               <p>A social network for music lovers!</p>
               <div class="project-category text-faded">
