Add Github button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -58,7 +58,7 @@
     <div class="header-content-inner">
       <h1>My Portfolio</h1>
       <hr>
-      <p>A responsive home page for my current projects</p>
+      <p>A responsive index for my current projects</p>
       <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
     </div>
   </div>
@@ -68,10 +68,11 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h2 class="section-heading">Let's build a project together!</h2>
+        <h2 class="section-heading">A little about me</h2>
         <hr class="light">
-        <p class="text-faded">I look forward to working with you...</p>
-        <a href="mailto:brandonloguercio@yahoo.com" class="btn btn-default btn-xl">Let's Get Started!</a>
+        <p>As a recent graduate of LEARN: A Ruby on Rails & Javascript Bootcamp. I have been equipped with the skills needed to start my career as a full-time Web Developer.
+          Check out my projects on Github!</p>
+        <a href="https://www.github.com/BrandonAndrewLoGuercio" class="btn btn-social-icon btn-lg btn-github" target="_blank" onclick="_gaq.push(['_trackEvent', 'btn-social-icon', 'click', 'btn-lg']);"><i class="fa fa-github"></i></a>
       </div>
     </div>
   </div>
